# stm32_traffic_lights

./: Build.sh  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  build_stm32.sh  cmake_install.cmake  compile_commands.json
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
main/: CMakeLists.txt  cmake_install.cmake  main.cpp
main/include/: .mxproject  CMakeLists.txt  Digitalout.hpp  RGB.hpp  atomic.hpp  stm32_rt.ioc  top.hpp
main/include/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
main/include/Core/Src/: gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
main/include/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
main/include/cmake/stm32cubemx/: CMakeLists.txt
main/include/src/: syscalls.c
